Test/Sema/Bad/bad_shadow_local_2.py.err
CHECK: bad_shadow_local_2.py:4:5: error: Cannot shadow class name: A
CHECK-NEXT: A:int = 5       # Invalid name
CHECK: 1 error generated!
